--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     color: #222222;
     font-size: 1em;
-    font-family: "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: "Helvetica", "Helvetica Neue", sans-serif;
 }
 
 .content-footer,
